Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: otus-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
  type: NodePort
